# bazel-ts-monorepo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json  tsconfig.json
pkgs/app/: BUILD.bazel  index.ts  package.json  rollup.config.js  terser_config.json
pkgs/app/src/: functions.ts
pkgs/common/: BUILD.bazel  index.ts  jest.config.js  package.json
pkgs/common/src/: mathlib.spec.ts  mathlib.ts
tools/: BUILD.bazel  bazel_deps.bzl  index.bzl  jest.bzl  terser.bzl  typescript.bzl
