workspace(
    # How this workspace would be referenced with absolute labels from another workspace
    name = "bazel-ts-monorepo",
    # Map the @npm bazel workspace to the node_modules directory. This lets Bazel use the same node_modules as other local tooling.
    managed_directories = {
        "@npm": ["node_modules"],
    },
)

load("//tools:bazel_deps.bzl", "fetch_bazel_skylib", "fetch_build_bazel_rules_nodejs")

fetch_bazel_skylib()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

fetch_build_bazel_rules_nodejs()

# The yarn_install rule runs yarn anytime the package.json or yarn.lock file changes.
# It also extracts any Bazel rules distributed in an npm package.
load("@build_bazel_rules_nodejs//:index.bzl", "yarn_install")

yarn_install(
    name = "npm",  # Name this "npm" so that Bazel Label references look like @npm//package
    exports_directories_only = True,  # (performance) node_modules as directories: https://github.com/bazelbuild/rules_nodejs/releases/tag/3.6.0
    package_json = "//:package.json",
    yarn_lock = "//:yarn.lock",
)
